Incorrect error message when failing to change sslMode

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.5
    • Affects Version/s: 2.5.4
    • Component/s: Logging, Security
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When setting sslMode using the setParameter command to 'disabled' or 'allowSSL' an incorrect error message is returned stating that the parameter value is incorrect. The error should say that the mode transition was incorrect.

            Assignee:
            Andreas Nilsson (Inactive)
            Reporter:
            Andreas Nilsson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: