SERVER-11872 Fixed error msg for setParameter sslMode/clusterAuthMode